--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -38,10 +38,13 @@
 						<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('resetPassword')}" th:errors="*{resetPassword}">resetPassword error</p> 
 					</div>
 					<div class="form-group">
+						<a href="#" th:href="@{'/user/' + ${editUserCommand.userId} + '/resetPwd'}" class="btn btn-warning" role="button" th:text="#{button.password.reset}"></a>
+					</div>
+					<div class="form-group">
 						<button type="submit" class="btn btn-primary" th:text="#{button.save}"></button>
 						<a sec:authorize="hasAuthority('PERM_DELETE_USER')" href="#" th:href="@{'/user/' + ${editUserCommand.userId} + '/delete'}" 
 							class="btn btn-danger" role="button" th:classappend="${!editUserCommand.isDeletable()}? 'disabled'" th:text="#{button.delete}"></a>
-						<a href="#" th:href="@{/user}" class="btn btn-default" role="button" th:text="#{button.cancel}"></a>	
+						<a href="#" th:href="@{/user}" class="btn btn-default" role="button" th:text="#{button.cancel}"></a>						
 					</div>
 				</div>
 			</div>
