update layout flags

--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -134,8 +134,8 @@ img.flag {
 }
 
 img.flag.big {
-	border: 1px solid;
-	border-color: grey;
+	border: 1px solid #ccc;
+	border-radius: 4px;
 }
 
 img.displayed {
