added info icons

--- a/src/main/resources/templates/user/create.html
+++ b/src/main/resources/templates/user/create.html
@@ -26,7 +26,9 @@
 							<ul class="list-group">
 								<li class="list-group-item" th:each="role : ${availableRoles}">
 									<input type="radio" th:field="*{roles}" th:value="${role}" th:disabled="${@webSecurityUtil.isRoleSelectionDisabledForUser(createUserCommand.username)}" />
-									<label th:for="${#ids.prev('roles')}" th:text="#{'msg.' + ${role}}"></label>								
+									<label th:for="${#ids.prev('roles')}" th:text="#{'msg.' + ${role}}"></label>
+									<span class="glyphicon glyphicon-info-sign" aria-hidden="true" data-toggle="tooltip" data-placement="top" 
+								th:title="#{'user.edit.tooltip.' + ${role}}"></span>
 								</li>							
 							</ul>
 							<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('roles')}" th:errors="*{roles}">roles Error</p>
@@ -43,6 +45,7 @@
 					</div>
 				</div>
 			</form>
+			<script type="text/javascript" th:src="@{/js/pages/tooltip.js}" charset="UTF-8"></script>
 		</div>
 	</body>
 </html>
