--- a/src/main/resources/templates/bet/edit.html
+++ b/src/main/resources/templates/bet/edit.html
@@ -73,6 +73,15 @@
 							</div>								
 						</div>
 						<br/>
+						<div class="row center">				
+							<input type="checkbox" th:field="*{useJoker}" th:value="${useJoker}" th:disabled="${!betCommand.isSettingJokerAllowed()}"/>
+							<label for="useJoker" th:text="#{betting.joker}"></label>
+							<span class="glyphicon glyphicon-info-sign" aria-hidden="true" data-toggle="tooltip" data-placement="top" 
+								th:title="#{betting.joker.tooltip}"></span>
+						</div>	
+						<div class="row center">
+							<span th:text="#{betting.joker.available(${betCommand.numberOfJokersUsed}, ${betCommand.maxJokers})}"></span>
+						</div>
 						<div class="row">
 							<button type="submit" class="btn btn-primary" th:text="#{button.save}"></button>
 							<a href="#" th:href="@{${'/matches#' + betCommand.matchId}}" class="btn btn-default" role="button" th:text="#{button.cancel}"></a>
@@ -81,6 +90,7 @@
 				</div>
 			</div>
 		</form>
+		<script type="text/javascript" th:src="@{/js/pages/tooltip.js}" charset="UTF-8"></script>
 	</div>
 </body>
 </html>
