--- a/src/main/resources/templates/matches/list.html
+++ b/src/main/resources/templates/matches/list.html
@@ -23,7 +23,7 @@
 									<br/>
 									<span th:text="${#temporals.format(matchCommand.kickOffDate, 'EEE dd. MMMM yyyy HH:mm')}"></span>
 									<span class="label label-warning label-as-badge big-badge right" th:if="${matchCommand.hasMatchFinished()}" th:text="${matchCommand.points}"></span>
-									<span th:if="${matchCommand.isJoker() && matchCommand.hasMatchFinished()}">
+									<span th:if="${matchCommand.isJoker()}">
 										<i class="fa fa-rocket right joker-icon" aria-hidden="true" data-toggle="tooltip" data-placement="top" th:title="#{bet.others.joker.tooltip}"></i>
 									</span>							  		
 									<br/> 
