--- a/src/main/resources/templates/bet/edit.html
+++ b/src/main/resources/templates/bet/edit.html
@@ -22,6 +22,11 @@
 					<input type="hidden" th:field="*{iconPathTeamOne}" class="form-control" />
 					<input type="hidden" th:field="*{iconPathTeamTwo}" class="form-control" />
 					<input type="hidden" th:field="*{showCountryIcons}" class="form-control" />
+					
+					<input type="hidden" th:field="*{numberOfJokersUsed}" class="form-control" />
+					<input type="hidden" th:field="*{maxJokers}" class="form-control" />
+					<input type="hidden" th:field="*{jokerEditable}" class="form-control" />
+					
 					<div class="form-group">
 						<div class="row center">
 							<div class="col-xs-6">
