using bell icon

--- a/src/main/resources/templates/bet/others.html
+++ b/src/main/resources/templates/bet/others.html
@@ -43,7 +43,7 @@
 					  			</div>	
 					  			<div class="col-xs-6 top-bottom-space">					  				
 					  				<div class="right">					  	
-					  					<i th:if="${bet.isJoker()}" class="fa fa-rocket" aria-hidden="true" data-toggle="tooltip" data-placement="top" th:title="#{bet.others.joker.tooltip}"></i>					  									
+					  					<i th:if="${bet.isJoker()}" class="fa fa-bell-o fa-lg" aria-hidden="true" data-toggle="tooltip" data-placement="top" th:title="#{bet.others.joker.tooltip}"></i>					  									
 						  				<span class="label label-as-badge big-badge label-success" th:classappend="${bet.getCssClassPenaltyWinnerOne()}" 
 						  					th:text="${bet.goalsTeamOne}"></span>
 									  	<span> : </span>
