--- a/src/main/resources/templates/bet/others.html
+++ b/src/main/resources/templates/bet/others.html
@@ -43,14 +43,13 @@
 					  			</div>	
 					  			<div class="col-xs-6 top-bottom-space">					  				
 					  				<div class="right">					  	
-					  					<i th:if="${bet.isJoker()}" class="fa fa-bell-o fa-lg" aria-hidden="true" data-toggle="tooltip" data-placement="top" th:title="#{bet.others.joker.tooltip}"></i>					  									
 						  				<span class="label label-as-badge big-badge label-success" th:classappend="${bet.getCssClassPenaltyWinnerOne()}" 
 						  					th:text="${bet.goalsTeamOne}"></span>
 									  	<span> : </span>
 								  		<span class="label label-as-badge big-badge label-success" th:classappend="${bet.getCssClassPenaltyWinnerTwo()}" 
 								  			th:text="${bet.goalsTeamTwo}"></span>	
 								  		<span>&nbsp;</span>
-						  				<span class="label label-as-badge big-badge label-warning" th:text="${bet.points}"></span>
+						  				<span class="label label-as-badge big-badge label-warning" th:classappend="${bet.isJoker()} ? joker-betting" th:text="${bet.points}"></span>
 					  				</div>
 					  			</div>
 	     					</div>     					
