--- a/src/main/resources/templates/info/points_freq.html
+++ b/src/main/resources/templates/info/points_freq.html
@@ -11,63 +11,25 @@
 			<span class="label label-info" th:text="#{pointsfrequency.title2}"></span>
 			<br/>
 			<br/>
-			<div class="row">			
-				<div class="col-xs-12 col-sm-6 col-md-4" th:if="${not #lists.isEmpty(fourPointsMap)}">
+			<div class="row" th:if="${pointsFrequencyCommand != null}">			
+				<div class="col-xs-12 col-sm-6 col-md-4" th:each="pointsfrequency : ${pointsFrequencyCommand.getResultList()}">
 					<div class="table-responsive">
 				   		<table class="table">
 				   			<tr class="active">
 				   				<th th:text="#{pointsfrequency.table.header.name}"></th>
-				   				<th><span class="label label-warning label-as-badge big-badge">4</span> <span th:text="#{pointsfrequency.points}"></span></th>
+				   				<th>
+				   					<span class="label label-warning label-as-badge big-badge" th:text="${pointsfrequency.points}">
+				   					</span>				   					
+				   					<span th:text="#{pointsfrequency.points}"></span>
+				   				</th>
 				   			</tr>
-				   			<tr class="success" th:each="pointCountResult : ${fourPointsMap}">	
+				   			<tr class="success" th:each="pointCountResult : ${pointsfrequency.list}">	
 				   				<td th:text="${pointCountResult.username}"></td>
 				   				<td th:text="${pointCountResult.numberOfPointsCount}"></td>			   									   				
 				   			</tr>				   			
 				   		</table>
 				   	</div>
-				</div>
-				<div class="col-xs-12 col-sm-6 col-md-4" th:if="${not #lists.isEmpty(threePointsMap)}">
-					<div class="table-responsive">
-				   		<table class="table">
-				   			<tr class="active">
-				   				<th th:text="#{pointsfrequency.table.header.name}"></th>
-				   				<th><span class="label label-warning label-as-badge big-badge">3</span> <span th:text="#{pointsfrequency.points}"></span></th>
-				   			</tr>
-				   			<tr class="warning" th:each="pointCountResult : ${threePointsMap}">	
-				   				<td th:text="${pointCountResult.username}"></td>
-				   				<td th:text="${pointCountResult.numberOfPointsCount}"></td>			   									   				
-				   			</tr>				   			
-				   		</table>
-				   	</div>
-				</div>
-				<div class="col-xs-12 col-sm-6 col-md-4" th:if="${not #lists.isEmpty(twoPointsMap)}">
-					<div class="table-responsive">
-				   		<table class="table">
-				   			<tr class="active">
-				   				<th th:text="#{pointsfrequency.table.header.name}"></th>
-				   				<th><span class="label label-warning label-as-badge big-badge">2</span> <span th:text="#{pointsfrequency.points}"></span></th>
-				   			</tr>
-				   			<tr class="info" th:each="pointCountResult : ${twoPointsMap}">	
-				   				<td th:text="${pointCountResult.username}"></td>
-				   				<td th:text="${pointCountResult.numberOfPointsCount}"></td>			   									   				
-				   			</tr>				   			
-				   		</table>
-				   	</div>
-				</div>
-				<div class="col-xs-12 col-sm-6 col-md-4" th:if="${not #lists.isEmpty(onePointsMap)}">
-					<div class="table-responsive">
-				   		<table class="table">
-				   			<tr class="active">
-				   				<th th:text="#{pointsfrequency.table.header.name}"></th>
-				   				<th><span class="label label-warning label-as-badge big-badge">1</span> <span th:text="#{pointsfrequency.points}"></span></th>
-				   			</tr>
-				   			<tr class="danger" th:each="pointCountResult : ${onePointsMap}">	
-				   				<td th:text="${pointCountResult.username}"></td>
-				   				<td th:text="${pointCountResult.numberOfPointsCount}"></td>			   									   				
-				   			</tr>				   			
-				   		</table>
-				   	</div>
-				</div>
+				</div>				
 			</div>			
 		</div>
 	</body>
