changed layout for showing joker

--- a/src/main/resources/templates/bet/others.html
+++ b/src/main/resources/templates/bet/others.html
@@ -49,7 +49,7 @@
 								  		<span class="label label-as-badge big-badge label-success" th:classappend="${bet.getCssClassPenaltyWinnerTwo()}" 
 								  			th:text="${bet.goalsTeamTwo}"></span>	
 								  		<span>&nbsp;</span>
-						  				<span class="label label-as-badge big-badge label-warning" th:classappend="${bet.isJoker()} ? joker-betting" th:text="${bet.points}"></span>
+						  				<span class="label label-as-badge big-badge label-warning" th:text="${bet.points}"></span>
 					  				</div>
 					  			</div>
 	     					</div>     					
