export extra bets to excel

--- a/src/main/resources/templates/admin/excel_export.html
+++ b/src/main/resources/templates/admin/excel_export.html
@@ -17,6 +17,12 @@
 			<hr/>
 			<div class="row">			
 				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+					<a class="btn btn-primary" role="button" th:href="@{/excelexport/extraBets}" th:text="#{administration.excel.export.extraBets}"></a>
+				</div>
+			</div>
+			<hr/>
+			<div class="row">			
+				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 					<a class="btn btn-primary" role="button" th:href="@{/excelexport/pointsCount}" th:text="#{administration.excel.export.pointsCount}"></a>
 				</div>
 			</div>
