--- a/src/main/resources/templates/admin/configuration.html
+++ b/src/main/resources/templates/admin/configuration.html
@@ -22,7 +22,10 @@
 							<button type="submit" class="btn btn-primary" th:text="#{button.save}"></button>
 						</div>
 					</form>
-				</div>				
+				</div>
+				<div class="visible-xs col-xs-12">
+					<hr/>
+				</div>
 				<div class="col-xs-12 col-sm-6 col-md-4">
 					<h2 th:text="#{administration.cache.title}"></h2>
 					<a class="btn btn-primary" role="button" th:href="@{/config/clearCache}" th:text="#{administration.clearCache}"></a>
