--- a/src/main/resources/templates/image/image_group.html
+++ b/src/main/resources/templates/image/image_group.html
@@ -21,7 +21,7 @@
 					<div class="row">
 						<div class="form-group">
 							<button type="button" class="btn btn-info" onclick="editImageGroup()" th:text="#{button.edit}"></button>
-							<input type="submit" class="btn btn-danger" th:value="#{button.delete}" />
+							<input type="submit" class="btn btn-danger" th:value="#{button.delete}" data-toggle="confirmation" th:data-title="#{confirmation.msg}" th:data-btn-ok-label="#{yes}" th:data-btn-cancel-label="#{no}"/>
 						</div>
 					</div>
 				</form>
@@ -41,6 +41,7 @@
 					</div>
 				</form>
 			</div>
+			<script type="text/javascript" th:src="@{/js/pages/confirmation.js}" charset="UTF-8"></script>
 		</div>
 	</body>
 </html>
