added excel export for ranking

--- a/src/main/resources/templates/admin/excel_export.html
+++ b/src/main/resources/templates/admin/excel_export.html
@@ -15,6 +15,12 @@
 				</div>
 			</div>
 			<hr/>
+			<div class="row">
+				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+					<a class="btn btn-primary" role="button" th:href="@{/excelexport/ranking}" th:text="#{administration.excel.export.ranking}"></a>
+				</div>
+			</div>
+			<hr/>
 			<div class="row">			
 				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 					<a class="btn btn-primary" role="button" th:href="@{/excelexport/extraBets}" th:text="#{administration.excel.export.extraBets}"></a>
