--- a/src/main/resources/templates/bet/others.html
+++ b/src/main/resources/templates/bet/others.html
@@ -7,11 +7,12 @@
 	<body>
 		<div layout:fragment="content">
 			<h1 th:text="#{bet.others.title}"></h1>
-            <div th:with="groupAvg=${allBetsCommand.getAvgGroupBet()}">
-            <p><span>Der Gruppentipp liegt bei: </span>
-                <span class="label label-success label-as-badge" th:text="${groupAvg.avgGoalsTeamOne}"/>
-                <span>:</span>
-                <span class="label label-success label-as-badge" th:text="${groupAvg.avgGoalsTeamTwo}"/>
+            <div th:with="groupAvg=${allBetsCommand.avgGroupBet}">
+            <p>
+				<span th:text="#{others.bet.groupBet} + ':'"></span>
+				<span class="label label-success label-as-badge" th:text="${groupAvg.avgGoalsTeamOne}">1</span>
+                <span> : </span>
+                <span class="label label-success label-as-badge" th:text="${groupAvg.avgGoalsTeamTwo}">1</span>
             </p>
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-4">
@@ -19,7 +20,7 @@
 						<div class="panel-heading">
 							<div class="row">
 								<div class="col-xs-12">
-									<img class="flag" th:if="${allBetsCommand.isShowCountryIcons()}" th:src="@{${allBetsCommand.getIconPathTeamOne()}}"/>									
+									<img class="flag" th:if="${allBetsCommand.isShowCountryIcons()}" th:src="@{${allBetsCommand.getIconPathTeamOne()}}"/>
 							  		<span class="bold" th:text="${allBetsCommand.teamNameOne}"></span>
 							  		<span> - </span>
 							  		<img class="flag" th:if="${allBetsCommand.isShowCountryIcons()}" th:src="@{${allBetsCommand.getIconPathTeamTwo()}}"/>
@@ -27,17 +28,17 @@
 									<br/>
 									<span th:text="${#temporals.format(allBetsCommand.kickOffDate, 'EEE dd. MMMM yyyy HH:mm')}"></span>
 									<div class="right">
-										<span class="label label-info label-as-badge big-badge" th:classappend="${allBetsCommand.match.getCssClassPenaltyWinnerOne()}" 
+										<span class="label label-info label-as-badge big-badge" th:classappend="${allBetsCommand.match.getCssClassPenaltyWinnerOne()}"
 										th:text="${allBetsCommand.match.goalsTeamOne}"></span>
 										<span th:if="${allBetsCommand.match.goalsTeamOne != null}"> : </span>
-										<span class="label label-info label-as-badge big-badge" th:classappend="${allBetsCommand.match.getCssClassPenaltyWinnerTwo()}" 
+										<span class="label label-info label-as-badge big-badge" th:classappend="${allBetsCommand.match.getCssClassPenaltyWinnerTwo()}"
 										th:text="${allBetsCommand.match.goalsTeamTwo}"></span>
 									</div>
-									<br/> 
+									<br/>
 									<span th:text="#{${allBetsCommand.group.titleMsgKey}}"></span><span>,</span>
 									<span th:text="${allBetsCommand.stadium}"></span>
-					  			</div>					  			
-				  			</div>				  									
+					  			</div>
+				  			</div>
 						</div>
 						<div class="panel-body">
 							<div class="row" th:each="bet : ${allBetsCommand.allBetsForMatch}">
@@ -45,23 +46,23 @@
 									<span th:replace="~{fragments/profile_image :: profile_image_small_with_popup(${@webSecurityUtil.getUserProfileImageKeyFor(bet.userName)})}"></span>
 								</div>
 								<div class="col-xs-4 top-bottom-space no-left-right-padding">
-									<span th:text="${bet.userName}" class="ranking-name"></span>			  									  		
-					  			</div>	
-					  			<div class="col-xs-6 top-bottom-space">					  				
-					  				<div class="right">					  	
-						  				<span class="label label-as-badge big-badge label-success" th:classappend="${bet.getCssClassPenaltyWinnerOne()}" 
+									<span th:text="${bet.userName}" class="ranking-name"></span>
+					  			</div>
+					  			<div class="col-xs-6 top-bottom-space">
+					  				<div class="right">
+						  				<span class="label label-as-badge big-badge label-success" th:classappend="${bet.getCssClassPenaltyWinnerOne()}"
 						  					th:text="${bet.goalsTeamOne}"></span>
 									  	<span> : </span>
-								  		<span class="label label-as-badge big-badge label-success" th:classappend="${bet.getCssClassPenaltyWinnerTwo()}" 
-								  			th:text="${bet.goalsTeamTwo}"></span>	
+								  		<span class="label label-as-badge big-badge label-success" th:classappend="${bet.getCssClassPenaltyWinnerTwo()}"
+								  			th:text="${bet.goalsTeamTwo}"></span>
 								  		<span>&nbsp;</span>
 						  				<span class="label label-as-badge big-badge label-warning" th:text="${bet.points}"></span>
 					  				</div>
 					  			</div>
-	     					</div>     					
-					   </div>					   
+	     					</div>
+					   </div>
 					</div>
-				</div>		
+				</div>
 			</div>
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-4">
@@ -69,6 +70,6 @@
 				</div>
 			</div>
 			<script type="text/javascript" th:src="@{/js/pages/tooltip.js}" charset="UTF-8"></script>
-		</div>		
+		</div>
 	</body>
 </html>
