added little more space at the end

--- a/src/main/resources/templates/bet/others.html
+++ b/src/main/resources/templates/bet/others.html
@@ -69,7 +69,9 @@
 					<a href="#" th:href="@{${'/matches#' + allBetsCommand.matchId}}" class="btn btn-default" role="button" th:text="#{button.back}"></a>
 				</div>
 			</div>
-			<br/>
+            <div class="row">
+                <br/>
+            </div>
 			<script type="text/javascript" th:src="@{/js/pages/tooltip.js}" charset="UTF-8"></script>
 		</div>
 	</body>
