redirect to the page comming from

--- a/src/main/resources/templates/matches/list.html
+++ b/src/main/resources/templates/matches/list.html
@@ -64,11 +64,11 @@
 								              class="btn btn-primary" role="button" th:title="#{matches.list.editMatch}">
 				            				  <span class="glyphicon glyphicon-pencil"></span>
 				            			</a>				            			
-				            			<a href="#" th:href="@{'/bet/createOrUpdate/' + ${matchCommand.matchId}}" th:classappend="${!matchCommand.isBettable()}? 'disabled'" 
+				            			<a href="#" th:href="@{'/bet/createOrUpdate/' + ${matchCommand.matchId} + '?redirectViewName=' + ${redirectViewName}}" th:classappend="${!matchCommand.isBettable()}? 'disabled'"
 												   class="btn btn-success" role="button" th:title="#{matches.list.betMatch}">
 											<span class="fa fa-thumbs-o-up fa-lg"></span>
 										</a>
-										<a sec:authorize="hasAuthority('PERM_EDIT_MATCH_RESULT')" href="#" th:href="@{'/matchresult/' + ${matchCommand.matchId}}" 
+										<a sec:authorize="hasAuthority('PERM_EDIT_MATCH_RESULT')" href="#" th:href="@{'/matchresult/' + ${matchCommand.matchId} + '?redirectViewName=' + ${redirectViewName}}"
 				            			        class="btn btn-info" role="button" th:title="#{matches.list.enterResult}">
 				            					<span class="fa fa-trophy fa-lg"></span>
 				            			</a>
