--- a/src/main/resources/templates/matches/matchresult.html
+++ b/src/main/resources/templates/matches/matchresult.html
@@ -15,6 +15,7 @@
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-4">					
 					<input type="hidden" th:field="*{matchId}" />
+					<input type="hidden" th:field="*{redirectViewName}" />
 					<input type="hidden" th:field="*{groupMatch}" />
 					<input type="hidden" th:field="*{teamNameOne}" />
 					<input type="hidden" th:field="*{teamNameTwo}" />
