--- a/src/main/resources/templates/bet/others.html
+++ b/src/main/resources/templates/bet/others.html
@@ -66,7 +66,7 @@
 			</div>
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-4">
-					<a href="#" th:href="@{${'/matches#' + allBetsCommand.matchId}}" class="btn btn-default" role="button" th:text="#{button.back}"></a>
+					<a href="#" th:href="@{${allBetsCommand.getBackUrl()}}" class="btn btn-default" role="button" th:text="#{button.back}"></a>
 				</div>
 			</div>
             <div class="row">
