--- a/src/main/resources/templates/matches/list.html
+++ b/src/main/resources/templates/matches/list.html
@@ -33,7 +33,7 @@
 							<div class="row">
 								<div class="col-xs-2 center">
 									<div class="short-div goal_padding">
-										<a th:if="${!matchCommand.isBettable()}" th:href="@{'/bet/others/match/' + ${matchCommand.matchId}}">
+										<a th:if="${!matchCommand.isBettable()}" th:href="@{'/bet/others/match/' + ${matchCommand.matchId} + '?redirectViewName=' + ${redirectViewName}}">
 											<span class="fa fa-thumbs-o-up fa-2x" th:title="#{matches.list.betted}"></span>
 										</a>
 										<span th:if="${matchCommand.isBettable()}" class="fa fa-thumbs-o-up fa-2x" th:title="#{matches.list.betted}"></span>
