--- a/src/main/resources/templates/bet/edit.html
+++ b/src/main/resources/templates/bet/edit.html
@@ -91,7 +91,7 @@
 						</div>
 						<div class="row">
 							<button type="submit" class="btn btn-primary" th:text="#{button.save}"></button>
-							<a href="#" th:href="@{${'/matches#' + betCommand.matchId}}" class="btn btn-default" role="button" th:text="#{button.cancel}"></a>
+							<a href="#" th:href="@{${betCommand.getBackUrl()}}" class="btn btn-default" role="button" th:text="#{button.cancel}"></a>
 						</div>
 					</div>
 				</div>
