--- a/src/main/resources/templates/ranking/list.html
+++ b/src/main/resources/templates/ranking/list.html
@@ -19,6 +19,14 @@
 					</div>
 				</div>
 			</div>
+            <div class="row">
+                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+                    <span class="label label-warning label-as-badge">Points</span>
+                    <span>, </span>
+                    <span>[Goal Difference]</span>
+                </div>
+            </div>
+            <br/>
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4" th:each="ranking,status : ${rankings}">				
 					<div class="panel panel-default">
@@ -29,11 +37,12 @@
 							<div class="col-xs-1 no-left-padding">
 								<span th:replace="~{fragments/profile_image :: profile_image_small_with_popup(${@webSecurityUtil.getUserProfileImageKeyFor(ranking.userName)})}"></span>
 							</div>
-							<div class="col-xs-6 no-left-padding">
+							<div class="col-xs-6 no-left-padding no-right-padding">
 								<span class="ranking-name" th:text="${ranking.userName}"></span>
 							</div>
-							<div class="col-xs-2">
-								<span class="badge success pull-right" th:text="${ranking.totalPoints}"></span>
+							<div class="col-xs-2 no-left-padding no-right-padding">
+								<span class="label label-warning label-as-badge ranking-badge" th:text="${ranking.totalPoints}"></span>
+                                <span th:text="${ranking.goalDifference}"></span>
 							</div>
 						</div>
 					</div>
