added empty row at the end

--- a/src/main/resources/templates/ranking/list.html
+++ b/src/main/resources/templates/ranking/list.html
@@ -42,11 +42,14 @@
 					</div>
 				</div>
 			</div>
-            <div th:if="${not #lists.isEmpty(rankings)}" class="row">
+            <div class="row" th:if="${not #lists.isEmpty(rankings)}">
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <button type="button" class="btn btn-info" data-toggle="collapse" data-target=".panel-heading"><span th:text="#{ranking.show.details.button}"></span></button>
                 </div>
             </div>
+			<div class="row">
+				<br/>
+			</div>
 		</div>
 	</body>
 </html>
